--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,9 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+	implementation 'redis.clients:jedis'
+
 	implementation 'com.fasterxml.jackson.core:jackson-annotations:2.13.1'
 	implementation 'com.fasterxml.jackson.core:jackson-core:2.13.1'
 	implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.1'
